# udpfwd

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: forwarder.rs  main.rs  win32.rs
test/: test_udp_loopback.py
