[package]
name = "udpfwd"
version = "1.0.0"
description = "UDP Forwarder - Forward UDP packets to target IP:Port"
authors = ["Megatops Software"]
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[build-dependencies]
embed-manifest = "1.3.1"
winres = "0.1"

[dependencies]
native-windows-gui = { version = "1.0", features = ["tray-notification", "message-window", "menu", "cursor", "status-bar", "embed-resource"] }
native-windows-derive = "1.0"
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Power", "Win32_UI_Shell"] }
clap = { version = "4.0", features = ["derive"] }